2009-06-08  Jackson Harper  <jackson@ximian.com>

	* xaml.cpp: Add TimeSpan to the primitive types.

2009-06-08  Chris Toshok  <toshok@ximian.com>

	* runtime.h (class Surface): add IsZombie.

2009-06-08  Jackson Harper  <jackson@ximian.com>

	* error.cpp|h: Add method and fields for line/char positions.
	* xaml.cpp: Fill in line/char positions on MoonErrors, this allows
	them to get propogated to managed and fixes some of the unit tests.

2009-06-08  Jackson Harper  <jackson@ximian.com>

	* xaml.cpp|h: Pass the property xmlns and the element xmlns into
	managed when setting properties.

2009-06-08  Alan McGovern  <amcgovern@novell.com>

	* runtime.cpp: Un-regress drt 783. We need to raise our cached
	  focus changed event, then process the focus change itself,
	  then raise the events for the new change.

2009-06-08  Alan McGovern  <amcgovern@novell.com>

	* runtime.h:
	* runtime.cpp: If Control.Focus is called from inside a
	  GotFocus handler, the focus change occurs immediately and
	  the new GotFocus event is raised as soon as the current
	  handler is finished.

2009-06-08  Jackson Harper  <jackson@ximian.com>

	* xaml.cpp: Bail out after we hit the first attribute parsing
	error.

2009-06-08  Jackson Harper  <jackson@ximian.com>

	* xaml.cpp: We need to convert path geometry strings from managed.

2009-06-08  Jackson Harper  <jackson@ximian.com>

	* xaml.cpp: Little more cleanup now that we don't have to reparse
	attributes for x:Class.

2009-06-05  Chris Toshok  <toshok@ximian.com>

	* xaml.cpp (XNamespace::SetAttribute): setting x:Class on an
	element when we aren't hydrating is illegal.  this has the
	pleasant side effect of removing the need to reparse attributes,
	so axe that code as well.

2009-06-05  Chris Toshok  <toshok@ximian.com>

	* textbox.cpp (TextBoxView::Blink): don't set deployments using
	the pattern Deployment::SetCurrent (GetDeployment()), as
	GetDeployment() issues a warning if the object's deployment
	doesn't match the current one.  use