@@ -1,3 +1,10 @@
+2009-06-09  Alan McGovern  <amcgovern@novell.com>
+
+	* runtime.cpp: The first mouse click will always Focus on the
+	  'default' control. After that we follow the normal focusing
+	  rules and focus on the first eligible control which the
+	  mouse has clicked on.
+
 2009-06-08  Jackson Harper  <jackson@ximian.com>
 
 	* xaml.cpp: Add TimeSpan to the primitive types.
